# Sistema-de-Gerenciamento-de-Hospital

./: .gitignore  CMakeLists.txt  README.md  TASKS.md  main.cpp
include/: Consulta.h  ExcecaoConsulta.h  Medico.h  Paciente.h  Pessoa.h  Prontuario.h  Registro.h  Sistema.h  Utilidades.h
src/: Consulta.cpp  Medico.cpp  Paciente.cpp  Pessoa.cpp  Prontuario.cpp  Registro.cpp  Sistema.cpp
